# setcover

./: .gitignore  Makefile  README.md  __init__.py  __main__.py  config.yaml  cover.py  environment.yml  etl.py  index.md  notebook.py  notebook_code.py  priorityqueue.py  pyproject.toml  requirements.txt  run.py  set.py  setup.py  weightedsetcover.py
.github/workflows/: python-package-conda.yml
setcover/: __init__.py  etl.py  exclusion.py  numpy.py  problem.py  report.py  run.py  set.py  utils.py  weighted.py
setcover/shell/: report.py  spark-submit.sh  spark-submit_etl.sh
setcoverage/: exclusion.py  set.py  weighted.py
spark-submit/: spark-submit_etl.sh
src/: __init__.py  cover.py  exclusion.py  priorityqueue.py  queue.py  set.py  weighted.py  weightedsetcover.py
test/: conftest.py  pyproject.toml  test_exclusion.py  test_sets.py  test_weighted.py
tests/: conftest.py  pyproject.toml  test_cover.py  test_data.py  test_exclusion.py  test_priorityqueue.py  test_problem.py  test_queue.py  test_set.py  test_sets.py  test_utils.py  test_weighted.py  test_weightesetcover.py
tests/data/: test_data_20210217.csv
weightedsetcover/: set.py
